# ai-docify

./: .flake8  .gitignore  README.md  my_test.doc.py  project_context.md  pyproject.toml
src/ai_docify/: __init__.py  builder.py  cli.py  config.py  generator.py  pricing.json  strategies.py  stripper.py  tools.py  utils.py
src/ai_docify/config/: __init__.py  config.py  pricing.json
src/ai_docify/templates/: docstring_generator.json
tests/: conftest.py  test_builder.py  test_cli.py  test_config.py  test_generator.py  test_new_commands.py  test_strategies.py  test_tools.py  test_utils.py  test_version.py
