[project]
name = "ai-docify"
version = "0.1.0"
description = "A simple CLI tool for generating safe, high-quality, NumPy/Sphinx style docstrings."
requires-python = ">=3.8"
dependencies = [
    "click",
    "openai",
    "python-dotenv",
    "rich",
    "tiktoken",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "pytest-cov",
]

[project.scripts]
ai-docify = "ai_docify.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_docify = ["templates/*.json", "config/*.json"]

# --- ADD THIS SECTION AT THE BOTTOM ---
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''