[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-docify"
version = "1.1.1"
description = "A CLI tool for generating safe, NumPy/Sphinx style docstrings using AST parsing."
readme = "README.md"  
authors = [
  { name = "John Spencer", email = "johnspencer97@live.co.uk" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
]
requires-python = ">=3.8"
dependencies = [
    "click",
    "openai",
    "python-dotenv",
    "rich",
    "tiktoken",
    "astunparse",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "pytest-cov",
    "build",    # <--- Added 'build' so you can run 'python -m build' easily
    "twine",    # <--- Added 'twine' for uploading to PyPI
]

[project.scripts]
ai-docify = "ai_docify.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_docify = ["templates/*.json", "pricing.json"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''